--- a/WebBuilderBackend/appsettings.json
+++ b/WebBuilderBackend/appsettings.json
@@ -5,6 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RedisURL": "127.0.0.1:6379",
+  "JWT": {
+    "ValidAudience": "http://localhost:7299",
+    "ValidIssuer": "http://localhost:7299",
+    "Secret": "JWTAuthentication@777"
+  }
 }
 
