--- a/backend/WebBuilderBackend/appsettings.json
+++ b/backend/WebBuilderBackend/appsettings.json
@@ -3,7 +3,8 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
-    }
+    },
+    "LogFilePath": "Logs\\log-{Date}.txt"
   },
   "AllowedHosts": "*",
   "RedisURL": "127.0.0.1:6379",
